--- a/ExerciseXData/Views/Diets/Delete.cshtml
+++ b/ExerciseXData/Views/Diets/Delete.cshtml
@@ -1,82 +1,96 @@
 ﻿@using ExerciseXDataLibrary.Models;
 @model DietsModel
 
-<form method="post" asp-action="DeletePOST">
-    @*DeletePOST here can change name with the CategoryController POST method*@
-    <input type="hidden" asp-for="D_Id" />
-    <div class=" border p-3 mt-4">
-        <div class=" row pb-2">
-            <h1 class="text-primary">Delete Diets</h1>
-            <hr />
+@* Check if the user is in the Admin role *@
+@if (User.IsInRole("Admin"))
+{
+
+
+    <form method="post" asp-action="DeletePOST">
+        @*DeletePOST here can change name with the CategoryController POST method*@
+        <input type="hidden" asp-for="D_Id" />
+        <div class=" border p-3 mt-4">
+            <div class=" row pb-2">
+                <h1 class="text-primary">Delete Diets</h1>
+                <hr />
+            </div>
+
+            <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
+
+            <div class="mb-3">
+                <label asp-for="D_Id"></label>
+                <input asp-for="D_Id" disabled disabled class="form-control" />
+
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="D_Name"></label>
+                <input asp-for="D_Name" disabled disabled class="form-control" />
+
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="D_Description"></label>
+                <input asp-for="D_Description" disabled disabled class="form-control" />
+
+            </div>
+
+
+            <div class="mb-3">
+                <label asp-for="D_Pros_1"></label>
+                <input asp-for="D_Pros_1" disabled disabled class="form-control" />
+
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="D_Pros_2"></label>
+                <input asp-for="D_Pros_2" disabled disabled class="form-control" />
+
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="D_Pros_3"></label>
+                <input asp-for="D_Pros_3" disabled disabled class="form-control" />
+
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="D_Cons_1"></label>
+                <input asp-for="D_Cons_1" disabled disabled class="form-control" />
+
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="D_Cons_2"></label>
+                <input asp-for="D_Cons_2" disabled disabled class="form-control" />
+
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="D_Cons_3"></label>
+                <input asp-for="D_Cons_3" disabled disabled class="form-control" />
+
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="D_Modified_Date"></label>
+                <input asp-for="D_Modified_Date" disabled class="form-control" />
+                <span asp-validation-for="D_Modified_Date" class="text-danger"></span>
+            </div>
+
+            <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
+            <a asp-controller="Diets" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
         </div>
+    </form>
+}
 
-        <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
-        
-        <div class="mb-3">
-            <label asp-for="D_Id"></label>
-            <input asp-for="D_Id" disabled disabled class="form-control" />
-
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="D_Name"></label>
-            <input asp-for="D_Name" disabled disabled class="form-control" />
-
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="D_Description"></label>
-            <input asp-for="D_Description" disabled disabled class="form-control" />
-
-        </div>
-
-
-        <div class="mb-3">
-            <label asp-for="D_Pros_1"></label>
-            <input asp-for="D_Pros_1" disabled disabled class="form-control" />
-
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="D_Pros_2"></label>
-            <input asp-for="D_Pros_2" disabled disabled class="form-control" />
-
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="D_Pros_3"></label>
-            <input asp-for="D_Pros_3" disabled disabled class="form-control" />
-
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="D_Cons_1"></label>
-            <input asp-for="D_Cons_1" disabled disabled class="form-control" />
-
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="D_Cons_2"></label>
-            <input asp-for="D_Cons_2" disabled disabled class="form-control" />
-
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="D_Cons_3"></label>
-            <input asp-for="D_Cons_3" disabled disabled class="form-control" />
-
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="D_Modified_Date"></label>
-            <input asp-for="D_Modified_Date" disabled class="form-control" />
-            <span asp-validation-for="D_Modified_Date" class="text-danger"></span>
-        </div>
-
-        <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-controller="Diets" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+else
+{
+    <div class="alert alert-danger mt-4">
+        <h4 class="alert-heading">Access Denied</h4>
+        <p>You do not have permission to access this page. Please contact an administrator if you believe this is an error.</p>
     </div>
-</form>
+}
 
 @section Scripts{
     @*this part is responsible for the client side*@
