--- a/ExerciseXData/Views/Exercises/Delete.cshtml
+++ b/ExerciseXData/Views/Exercises/Delete.cshtml
@@ -1,14 +1,18 @@
 ﻿@using ExerciseXDataLibrary.Models;
 @model ExercisesModel
 
-<form method="post" asp-action="Delete">
-    @*DeletePOST here can change name with the CategoryController POST method*@
-    <input type="hidden" asp-for="E_Id" />
-    <div class=" border p-3 mt-4">
-        <div class=" row pb-2">
-            <h1 class="text-primary">Delete Exercise</h1>
-            <hr />
-        </div>
+@* Check if the user is in the Admin role *@
+@if (User.IsInRole("Admin"))
+{
+
+    <form method="post" asp-action="Delete">
+        @*DeletePOST here can change name with the CategoryController POST method*@
+        <input type="hidden" asp-for="E_Id" />
+        <div class=" border p-3 mt-4">
+            <div class=" row pb-2">
+                <h1 class="text-primary">Delete Exercise</h1>
+                <hr />
+            </div>
             <div asp-validation-summary="ModelOnly"></div> @*Displays all the validation texts*@
         </div>
 
@@ -53,12 +57,12 @@
         <div class="mb-3">
             <label asp-for="E_Cons_1"></label>
             <input asp-for="E_Cons_1" class="form-control" />
-            
+
         </div>
         <div class="mb-3">
             <label asp-for="E_Cons_2"></label>
             <input asp-for="E_Cons_2" class="form-control" />
-            
+
         </div>
         <div class="mb-3">
             <label asp-for="E_Cons_3"></label>
@@ -74,9 +78,17 @@
 
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
         <a asp-controller="Exercises" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
-    </div>
-</form>
+        
+    </form>
+}
 
+else
+{
+    <div class="alert alert-danger mt-4">
+        <h4 class="alert-heading">Access Denied</h4>
+        <p>You do not have permission to access this page. Please contact an administrator if you believe this is an error.</p>
+    </div>
+}
 @section Scripts{
     @*this part is responsible for the client side*@
     @{
