--- a/ExerciseXData/Views/Account/Login.cshtml
+++ b/ExerciseXData/Views/Account/Login.cshtml
@@ -7,8 +7,8 @@
     <form asp-controller="Account" asp-action="Login" method="post" id="loginForm">
         <h2>Login</h2>
         <div class="form-group">
-            <label asp-for="Username">Username</label>
-            <input asp-for="Username" type="text" required>
+            <label asp-for="EmailOrUsername">Username</label>
+            <input asp-for="EmailOrUsername" type="text" required>
         </div>
         <div class="form-group">
             <label asp-for="Password">Password</label>
@@ -19,7 +19,7 @@
     </form>
 </div>
 
-@if (ViewData["ErrorMessage"] != null)
+@* @if (ViewData["ErrorMessage"] != null)
 {
     <div class="popup-message">
         <p>@ViewData["ErrorMessage"]</p>
@@ -41,3 +41,4 @@
         });
     </script>
 }
+ *@
