--- a/ExerciseXData/Views/DietsFoods/Index.cshtml
+++ b/ExerciseXData/Views/DietsFoods/Index.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "List of Diets";
 }
 
-@*<partial name =" _Notification" /> @*calls on the partial view from_Notification in shared folder*@
+@* Check if the user is in the Admin role *@
+@if (User.IsInRole("Admin"))
+{
+
+
 
 <div class=" container p-3">
     <div class="row pt-4">
@@ -60,3 +64,12 @@
         </tbody>
     </table>
 </div>
+}
+
+else
+{
+    <div class="alert alert-danger mt-4">
+        <h4 class="alert-heading">Access Denied</h4>
+        <p>You do not have permission to access this page. Please contact an administrator if you believe this is an error.</p>
+    </div>
+}
