--- a/ExerciseXData/Views/Exercises/Details.cshtml
+++ b/ExerciseXData/Views/Exercises/Details.cshtml
@@ -1,6 +1,11 @@
 ﻿@using ExerciseXDataLibrary.Models;
 @model ExercisesModel
 
+
+@* Check if the user is in the Admin role *@
+@if (User.IsInRole("Admin"))
+{
+
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
             <h1 class="text-primary"> Exercise Details</h1>
@@ -78,12 +83,19 @@
         </div>
 
         <div class="form-group">
-        
-        <a class="btn btn-secondary" asp-action="Edit" asp-route-id="@Model.E_Id" ></a>
-        <a class="btn btn-secondary" asp-action="Index" style="width:150px">Back to List</a>
+            <a class="btn btn-secondary" asp-action="Edit" asp-route-id="@Model.E_Id" ></a>
+            <a class="btn btn-secondary" asp-action="Index" style="width:150px">Back to List</a>
+        </div>
     </div>
-</div>
+}
 
+else
+{
+    <div class="alert alert-danger mt-4">
+        <h4 class="alert-heading">Access Denied</h4>
+        <p>You do not have permission to access this page. Please contact an administrator if you believe this is an error.</p>
+    </div>
+}
 @section Scripts{
     @*this part is responsible for the client side*@
     @{
