--- a/ExerciseXData/Views/Foods/Create.cshtml
+++ b/ExerciseXData/Views/Foods/Create.cshtml
@@ -1,49 +1,62 @@
 ﻿@using ExerciseXDataLibrary.Models;
 @model FoodsModel
 
-<form method="post">
-    <div class=" border p-3 mt-4">
-        <div class=" row pb-2">
-            <h1 class="text-primary">Create Food</h1>
-            <hr />
-        </div>
-        <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
-        
-        <div class="mb-3">
-            <label asp-for="F_Id"></label>
-            <input asp-for="F_Id" class="form-control" />
-            <span asp-validation-for="F_Id" class="text-danger"></span>
-        </div>
+@* Check if the user is in the Admin role *@
+@if (User.IsInRole("Admin"))
+{
 
-        <div class="mb-3">
-            <label asp-for="F_Image"></label>
-            <input asp-for="F_Image" class="form-control" />
-            <span asp-validation-for="F_Image" class="text-danger"></span>
-        </div>
 
-        <div class="mb-3">
-            <label asp-for="F_Name"></label>
-            <input asp-for="F_Name" class="form-control" />
-            <span asp-validation-for="F_Name" class="text-danger"></span>
-        </div>
+    <form method="post">
+        <div class=" border p-3 mt-4">
+            <div class=" row pb-2">
+                <h1 class="text-primary">Create Food</h1>
+                <hr />
+            </div>
+            <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
 
-        <div class="mb-3">
-            <label asp-for="F_Calories"></label>
-            <input asp-for="F_Calories" class="form-control" />
-            <span asp-validation-for="F_Calories" class="text-danger"></span>
-        </div>
+            <div class="mb-3">
+                <label asp-for="F_Id"></label>
+                <input asp-for="F_Id" class="form-control" />
+                <span asp-validation-for="F_Id" class="text-danger"></span>
+            </div>
 
-        <div class="mb-3">
-            <label asp-for="F_Modified_Date"></label>
-            <input asp-for="F_Modified_Date" class="form-control" />
-            <span asp-validation-for="F_Modified_Date" class="text-danger"></span>
-        </div>
+            <div class="mb-3">
+                <label asp-for="F_Image"></label>
+                <input asp-for="F_Image" class="form-control" />
+                <span asp-validation-for="F_Image" class="text-danger"></span>
+            </div>
 
-        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
-        <a asp-controller="Foods" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+            <div class="mb-3">
+                <label asp-for="F_Name"></label>
+                <input asp-for="F_Name" class="form-control" />
+                <span asp-validation-for="F_Name" class="text-danger"></span>
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="F_Calories"></label>
+                <input asp-for="F_Calories" class="form-control" />
+                <span asp-validation-for="F_Calories" class="text-danger"></span>
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="F_Modified_Date"></label>
+                <input asp-for="F_Modified_Date" class="form-control" />
+                <span asp-validation-for="F_Modified_Date" class="text-danger"></span>
+            </div>
+
+            <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
+            <a asp-controller="Foods" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        </div>
+    </form>
+}
+
+else
+{
+    <div class="alert alert-danger mt-4">
+        <h4 class="alert-heading">Access Denied</h4>
+        <p>You do not have permission to access this page. Please contact an administrator if you believe this is an error.</p>
     </div>
-</form>
-
+}
 @section Scripts{
     @*this part is responsible for the client side*@
     @{
