--- a/ExerciseXData/Views/Foods/Edit.cshtml
+++ b/ExerciseXData/Views/Foods/Edit.cshtml
@@ -1,6 +1,11 @@
 ﻿@using ExerciseXDataLibrary.Models;
 @model FoodsModel
 
+@* Check if the user is in the Admin role *@
+@if (User.IsInRole("Admin"))
+{
+
+
 <form method="post">
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
@@ -43,7 +48,15 @@
         <a asp-controller="Foods" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
+}
 
+else
+{
+    <div class="alert alert-danger mt-4">
+        <h4 class="alert-heading">Access Denied</h4>
+        <p>You do not have permission to access this page. Please contact an administrator if you believe this is an error.</p>
+    </div>
+}
 @section Scripts{
     @*this part is responsible for the client side*@
     @{
