no errors upon log in with admin acc, need to fix view for admin dashboard view

--- a/ExerciseXData/Views/Account/Login.cshtml
+++ b/ExerciseXData/Views/Account/Login.cshtml
@@ -7,8 +7,8 @@
     <form asp-controller="Account" asp-action="Login" method="post" id="loginForm">
         <h2>Login</h2>
         <div class="form-group">
-            <label asp-for="EmailOrUsername">Username</label>
-            <input asp-for="EmailOrUsername" type="text" required>
+            <label asp-for="Email">Username</label>
+            <input asp-for="Email" type="text" required>
         </div>
         <div class="form-group">
             <label asp-for="Password">Password</label>
