--- a/ExerciseXData/Views/Account/UserDashboard.cshtml
+++ b/ExerciseXData/Views/Account/UserDashboard.cshtml
@@ -14,12 +14,19 @@
         <!-- User Profile Information -->
         <div class="profile-info">
             <h2>Your Profile</h2>
-            <p><strong>Username:</strong> @Model.Username</p>
             <p><strong>Email:</strong> @Model.Email</p>
+            <p><strong>Username:</strong> @Model.Username</p>
+            <p><strong>Gender:</strong> @Model.Gender</p>
+            <p><strong>Role:</strong> @Model.Role</p>
             <p><strong>Age:</strong> @Model.Age</p>
             <p><strong>Height:</strong> @Model.Height_CM cm</p>
             <p><strong>Weight:</strong> @Model.Weight_KG kg</p>
             <p><strong>Goal:</strong> @Model.Goal</p>
+            <p><strong>Lifestyle Condition 1:</strong>@Model.Lifestyle_Condition_1</p>
+            <p><strong>Lifestyle Condition 2:</strong>@Model.Lifestyle_Condition_2</p>
+            <p><strong>Lifestyle Condition 3:</strong>@Model.Lifestyle_Condition_3</p>
+            <p><strong>Lifestyle Condition 4:</strong>@Model.Lifestyle_Condition_4</p>
+            <p><strong>Lifestyle Condition 5:</strong>@Model.Lifestyle_Condition_5</p>
         </div>
 
         <!-- Exercise Section -->
