--- a/ExerciseXData/Views/Diets/Create.cshtml
+++ b/ExerciseXData/Views/Diets/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model DietsModel
+﻿@* @using ExerciseXDataLibrary.Models;
+@model DietsModel *@
 
 @* Check if the user is in the Admin role *@
 @if (User.IsInRole("Admin"))
