--- a/ExerciseXData/Views/Diets/Index.cshtml
+++ b/ExerciseXData/Views/Diets/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model IEnumerable<DietsModel>
+﻿@* @using ExerciseXDataLibrary.Models;
+@model IEnumerable<DietsModel> *@
 @{
     ViewData["Title"] = "List of Diets";
 }
