--- a/ExerciseXData/Views/DietsFoods/Create.cshtml
+++ b/ExerciseXData/Views/DietsFoods/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models
-@model DietsFoodsModel
+﻿@* @using ExerciseXDataLibrary.Models
+@model DietsFoodsModel *@
 
 @* Check if the user is in the Admin role *@
 @if (User.IsInRole("Admin"))
