--- a/ExerciseXData/Views/DietsFoods/Index.cshtml
+++ b/ExerciseXData/Views/DietsFoods/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model IEnumerable<DietsFoodsModel>
+﻿@* @using ExerciseXDataLibrary.Models;
+@model IEnumerable<DietsFoodsModel> *@
 @{
     ViewData["Title"] = "List of Diets";
 }
