--- a/ExerciseXData/Views/Exercises/Create.cshtml
+++ b/ExerciseXData/Views/Exercises/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model ExercisesModel
+﻿@* @using ExerciseXDataLibrary.Models;
+@model ExercisesModel *@
 
 @* Check if the user is in the Admin role *@
 @if (User.IsInRole("Admin"))
