--- a/ExerciseXData/Views/Foods/Index.cshtml
+++ b/ExerciseXData/Views/Foods/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model IEnumerable<FoodsModel>
+﻿@* @using ExerciseXDataLibrary.Models;
+@model IEnumerable<FoodsModel> *@
 @{
     ViewData["Title"] = "List of Foods";
 }
