--- a/ExerciseXData/Views/UsersExercises/Index.cshtml
+++ b/ExerciseXData/Views/UsersExercises/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model IEnumerable<UsersExercisesModel>
+﻿@* @using ExerciseXDataLibrary.Models;
+@model IEnumerable<UsersExercisesModel> *@
 @{
     ViewData["Title"] = "List of User and their exercises";
 }
