--- a/ExerciseXData/Views/Categories/Create.cshtml
+++ b/ExerciseXData/Views/Categories/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model CategoriesModel
+﻿@* @using ExerciseXDataLibrary.Models;
+@model CategoriesModel *@
 
 @* Check if the user is in the Admin role *@
 @if (User.IsInRole("Admin"))
