--- a/ExerciseXData/Views/Categories/Index.cshtml
+++ b/ExerciseXData/Views/Categories/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model IEnumerable<CategoriesModel>
+﻿@* @using ExerciseXDataLibrary.Models;
+@model IEnumerable<CategoriesModel> *@
 @{
     ViewData["Title"] = "List of Categories";
 }
