--- a/ExerciseXData/Views/Exercises/Index.cshtml
+++ b/ExerciseXData/Views/Exercises/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model IEnumerable<ExercisesModel>
+﻿@* @using ExerciseXDataLibrary.Models;
+@model IEnumerable<ExercisesModel> *@
 @{
     ViewData["Title"] = "List of Exercises";
 }
