--- a/ExerciseXData/Views/Foods/Details.cshtml
+++ b/ExerciseXData/Views/Foods/Details.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model FoodsModel
+﻿@* @using ExerciseXDataLibrary.Models;
+@model FoodsModel *@
 
 @* Check if the user is in the Admin role *@
 @if (User.IsInRole("Admin"))
