--- a/ExerciseXData/Views/UsersDiets/Create.cshtml
+++ b/ExerciseXData/Views/UsersDiets/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using ExerciseXDataLibrary.Models;
-@model UsersDietsModel
+﻿@* @using ExerciseXDataLibrary.Models;
+@model UsersDietsModel *@
 
 <form method="post">
     <div class=" border p-3 mt-4">
