--- a/ExerciseXData/Views/Account/Login.cshtml
+++ b/ExerciseXData/Views/Account/Login.cshtml
@@ -9,6 +9,8 @@
 <div class="row">
     <div class="col-md-6">
         <form asp-action="Login" method="post">
+            @Html.AntiForgeryToken()
+
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
