admin dashboard can now be viewed

--- a/ExerciseXData/Views/Admin/AdminDashboard.cshtml
+++ b/ExerciseXData/Views/Admin/AdminDashboard.cshtml
@@ -1,1 +1,8 @@
 ﻿
+
+<h2>Admin Dashboard</h2>
+<div>
+    <p>Total Users: @Model.TotalUsers</p>
+    <p>Total Exercises: @Model.TotalExercises</p>
+    <p>Total Diets: @Model.TotalDiets</p>
+</div>
