currently working on categories for admin

--- a/ExerciseXData/Views/Admin/AdminDashboard.cshtml
+++ b/ExerciseXData/Views/Admin/AdminDashboard.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿@using ExerciseXData.Admin
+@model AdminDashboardDto
+
+@{
+    Layout = "~/Views/Admin/_AdminLayout.cshtml"; // Point to an admin-specific layout, if any
+}
 
 <h2>Admin Dashboard</h2>
 <div>
