--- a/ExerciseXData/Views/Shared/_Layout.cshtml
+++ b/ExerciseXData/Views/Shared/_Layout.cshtml
@@ -38,17 +38,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Foods" asp-action="Index">Food</a>
                         </li>
 
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UsersExercises" asp-action="Index">UsersExercises</a>
-                        </li>
+                        </li> *@
 
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UsersDiets" asp-action="Index">UsersDiets</a>
-                        </li>
+                        </li> *@
 
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DietsFoods" asp-action="Index">DietsFoods</a>
-                        </li>
+                        </li> *@
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -76,8 +76,11 @@
                     </div>
 
                     <div class="ms-auto">
-                        <a class="btn btn-primary" asp-controller="Account" asp-action="UserDashboard">UserDashboard</a>
+                        <a class="btn btn-primary" asp-controller="Admin" asp-action="Logout">Log Out</a>
                     </div>
+                    @* <div class="ms-auto">
+                        <a class="btn btn-primary" asp-controller="Account" asp-action="UserDashboard">UserDashboard</a>
+                    </div> *@
                 </div>
             </div>
         </nav>
