--- a/ExerciseXData/Views/Categories/Create.cshtml
+++ b/ExerciseXData/Views/Categories/Create.cshtml
@@ -1,4 +1,5 @@
-﻿ @model ExerciseXData_ExerciseLibrary.Models.CategoriesModel
+﻿@using ExerciseXData_ExerciseLibrary.Models
+@model CategoriesModel
 
 @{
     Layout = "~/Views/Admin/_AdminLayout.cshtml";
@@ -7,13 +8,13 @@
 <form method="post">
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
-            <h1 class="text-primary">Edit Category</h1>
-            <hr/>
+            <h1 class="text-primary">Create Category</h1>
+            <hr />
         </div>
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
         <div class="mb-3">
             <label asp-for="C_Name"></label>
-            <input asp-for="C_Name" class="form-control"/>
+            <input asp-for="C_Name" class="form-control" />
             <span asp-validation-for="C_Name" class="text-danger"></span>
         </div>
         <div class="mb-3">
@@ -21,13 +22,14 @@
             <input asp-for="C_Image" class="form-control" />
             <span asp-validation-for="C_Image" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
-        <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
+        <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
-@section Scripts{ @*this part is responsible for the client side*@
+@section Scripts {
+    @*this part is responsible for the client side*@
     @{
-        <partial name ="_ValidationScriptsPartial"/>
+        <partial name="_ValidationScriptsPartial" />
     }
 }
