--- a/ExerciseXData/Views/Categories/Delete.cshtml
+++ b/ExerciseXData/Views/Categories/Delete.cshtml
@@ -1,5 +1,36 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿ @model ExerciseXData_ExerciseLibrary.Models.CategoriesModel
+
 @{
+    Layout = "~/Views/Admin/_AdminLayout.cshtml";
+}
+
+<form method="post" asp-action="DeletePOST">
+    @*DeletePOST here can change name with the CategoryController POST method*@
+    <input asp-for="C_Id" hidden />
+    <div class=" border p-3 mt-4">
+        <div class=" row pb-2">
+            <h1 class="text-primary">Delete Category</h1>
+            <hr />
+        </div>
+        <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
+        <div class="mb-3">
+            <label asp-for="C_Name"></label>
+            <input asp-for="C_Name" disabled class="form-control" />
+
+        </div>
+        <div class="mb-3">
+            <label asp-for="C_Image"></label>
+            <input asp-for="C_Image" disabled class="form-control" />
+
+        </div>
+        <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
+        <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+    </div>
+</form>
+
+@section Scripts {
+    @*this part is responsible for the client side*@
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 }
