--- a/ExerciseXData/Views/Shared/_Layout.cshtml
+++ b/ExerciseXData/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">Home</a>
                         </li>
-                        <li class="nav-item">
+                      @*   <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
                         <li class="nav-item">
@@ -36,7 +36,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Foods" asp-action="Index">Food</a>
-                        </li>
+                        </li> *@
 
                         @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UsersExercises" asp-action="Index">UsersExercises</a>
