--- a/ExerciseXData/Views/Categories/Edit.cshtml
+++ b/ExerciseXData/Views/Categories/Edit.cshtml
@@ -10,6 +10,8 @@
             <h1 class="text-primary">Edit Category</h1>
             <hr/>
         </div>
+
+        @Html.HiddenFor(model => model.C_Id)
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
         <div class="mb-3">
             <label asp-for="C_Name"></label>
@@ -21,6 +23,12 @@
             <input asp-for="C_Image" class="form-control" />
             <span asp-validation-for="C_Image" class="text-danger"></span>
         </div>
+
+        <div>
+            <label for="C_Modified_Date">Modified Date</label>
+            <input asp-for="C_Modified_Date" type="datetime-local" />
+        </div>
+
         <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
         <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
