currently added CRUD for exercise, testing functions

--- a/ExerciseXData/Views/Admin/_AdminLayout.cshtml
+++ b/ExerciseXData/Views/Admin/_AdminLayout.cshtml
@@ -25,16 +25,16 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Create">Manage Categories</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Manage Categories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Exercises" asp-action="Manage">Manage Exercises</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Exercises" asp-action="Index" asp-route-categoryId="1">Manage Exercises</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Diets" asp-action="Manage">Manage Diets</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Diets" asp-action="Index">Manage Diets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Foods" asp-action="Manage">Manage Foods</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Foods" asp-action="Index">Manage Foods</a>
                         </li>
 
                         <li class="nav-item dropdown">
