admin exercise CRUD can view, except create

--- a/ExerciseXData/Views/Admin/_AdminLayout.cshtml
+++ b/ExerciseXData/Views/Admin/_AdminLayout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Manage Categories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Exercises" asp-action="Index" asp-route-categoryId="1">Manage Exercises</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Exercises" asp-action="Index">Manage Exercises</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Diets" asp-action="Index">Manage Diets</a>
