--- a/ExerciseXData/Views/Exercises/Create.cshtml
+++ b/ExerciseXData/Views/Exercises/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using ExerciseXData_ExerciseLibrary.Models
-@model ExercisesModel
+﻿@model ExerciseXData_ExerciseLibrary.DataTransferObject.CreateExerciseViewModel
 
 @{
     Layout = "~/Views/Admin/_AdminLayout.cshtml";
@@ -11,11 +10,18 @@
             <h1 class="text-primary">Create Exercise</h1>
             <hr />
         </div>
-        <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
         
+
+        <!-- Category Dropdown -->
         <div class="mb-3">
-            <label asp-for="CategoriesC_Id"></label>
-            <input asp-for="CategoriesC_Id" class="form-control" />
+            <label for="CategoriesC_Id">Category</label>
+            <select asp-for="CategoriesC_Id" class="form-control">
+                <option value="">Select Category</option>
+                @foreach (var category in (SelectList)ViewBag.Categories ?? new SelectList(new List<SelectListItem>()))
+                {
+                    <option value="@category.Value">@category.Text</option>
+                }
+            </select>
             <span asp-validation-for="CategoriesC_Id" class="text-danger"></span>
         </div>
 
